--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Learn Git Desktop</h1>
-    
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis iusto velit assumenda minima ea quod tempora, incidunt pariatur earum ratione repellat ullam in cumque ut et vel. Adipisci, eos quis!</p>
 </body>
 </html>
