add footer and stuff

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>Learn Git Desktop</h1>
-    <main>this is text forn second_branch</main>
+    <main>this is text from second_branch</main>
+    <footer> this is footer from third</footer>
     
 </body>
 </html>
