Revert "Merge pull request #2 from HushToDefault/third_branch"
This reverts commit b88da1c9a609c2845f218274687df4c6521375f2, reversing
changes made to 7c28f25e2af3d3b5ca80ef1405507b1fc01502ba.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
 </head>
 <body>
     <h1>Learn Git Desktop</h1>
-    <main>this is text from second_branch</main>
-    <footer> this is footer from third</footer>
+    <main>this is text forn second_branch</main>
     
 </body>
 </html>
